retraction analysis, python nb

--- a/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
+++ b/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
     "test_sources = defaultdict(list)\n",
     "test_ret_men = defaultdict(list)\n",
     "\n",
-    "with open(csv_path_pre_retraction) as a_file:\n",
+    "with open(csv_path_post_retraction) as a_file:\n",
     "    csv_reader = csv.reader(a_file, delimiter=',')\n",
     "    # skip the headers \n",
     "    # 0.Date,\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,94 +286,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ Total number of documents:  278\n",
+      "+ Total number of documents:  337\n",
       "\n",
       "+ Source: \n",
-      "      from the editor page: 165\n",
-      "      from other sources: 113\n",
+      "      from the editor page: 225\n",
+      "      from other sources: 112\n",
       "\n",
-      "+ Total number of in-text reference pointers:  428\n",
+      "+ Total number of in-text reference pointers:  442\n",
       "\n",
-      "+ Average number of in-text reference pointers per document:  1.539568345323741\n",
+      "+ Average number of in-text reference pointers per document:  1.311572700296736\n",
       "\n",
-      "+ Documents whcih mention the retraction:  23\n",
+      "+ Documents which mention the retraction:  128\n",
       "\n",
       "+ In-text reference pointers: \n",
       "\n",
       "      sentiment count:\n",
-      "       neutral  :  338\n",
-      "       negative  :  87\n",
-      "       positive  :  3\n",
+      "       neutral  :  240\n",
+      "       negative  :  202\n",
       "      -----\n",
       "\n",
       "      intent count:\n",
-      "       discusses  :  114\n",
-      "       credits  :  52\n",
-      "       describes  :  49\n",
-      "       disputes  :  47\n",
-      "       cites for information  :  44\n",
-      "       obtains background from  :  35\n",
-      "       qualifies  :  23\n",
-      "       cites as evidence  :  21\n",
-      "       critiques  :  20\n",
-      "       obtains support from  :  6\n",
+      "       discusses  :  149\n",
+      "       credits  :  62\n",
+      "       critiques  :  45\n",
+      "       obtains background from  :  38\n",
+      "       cites as evidence  :  37\n",
+      "       disputes  :  30\n",
+      "       cites for information  :  29\n",
+      "       describes  :  26\n",
+      "       qualifies  :  18\n",
       "       includes excerpt from  :  5\n",
-      "       ridicules  :  4\n",
-      "       updates  :  3\n",
-      "       uses conclusions from  :  2\n",
-      "       discribes  :  1\n",
-      "       extends  :  1\n",
-      "       uses data from  :  1\n",
+      "       uses data from  :  2\n",
+      "       refutes  :  1\n",
       "      -----\n",
       "\n",
       "      common patters (intent, sentiment, mentions retraction):\n",
-      "       ('discusses', 'neutral', 'no')  :  86\n",
-      "       ('describes', 'neutral', 'no')  :  45\n",
-      "       ('credits', 'neutral', 'no')  :  41\n",
-      "       ('cites for information', 'neutral', 'no')  :  39\n",
-      "       ('obtains background from', 'neutral', 'no')  :  34\n",
-      "       ('disputes', 'neutral', 'no')  :  33\n",
-      "       ('qualifies', 'neutral', 'no')  :  18\n",
-      "       ('discusses', 'negative', 'no')  :  16\n",
-      "       ('critiques', 'negative', 'no')  :  14\n",
-      "       ('cites as evidence', 'neutral', 'no')  :  11\n",
-      "       ('credits', 'negative', 'no')  :  10\n",
-      "       ('disputes', 'negative', 'no')  :  9\n",
-      "       ('cites as evidence', 'negative', 'no')  :  8\n",
-      "       ('obtains support from', 'neutral', 'no')  :  6\n",
-      "       ('discusses', 'negative', 'yes')  :  6\n",
-      "       ('critiques', 'negative', 'yes')  :  6\n",
-      "       ('includes excerpt from', 'neutral', 'no')  :  5\n",
-      "       ('discusses', 'neutral', 'yes')  :  4\n",
-      "       ('disputes', 'neutral', 'yes')  :  4\n",
-      "       ('updates', 'neutral', 'no')  :  3\n",
+      "       ('discusses', 'neutral', 'yes')  :  48\n",
+      "       ('discusses', 'negative', 'yes')  :  39\n",
+      "       ('discusses', 'negative', 'no')  :  32\n",
+      "       ('discusses', 'neutral', 'no')  :  30\n",
+      "       ('critiques', 'negative', 'no')  :  29\n",
+      "       ('obtains background from', 'neutral', 'yes')  :  23\n",
+      "       ('credits', 'neutral', 'no')  :  22\n",
+      "       ('credits', 'negative', 'no')  :  18\n",
+      "       ('cites for information', 'neutral', 'no')  :  17\n",
+      "       ('critiques', 'negative', 'yes')  :  15\n",
+      "       ('cites as evidence', 'negative', 'no')  :  15\n",
+      "       ('credits', 'neutral', 'yes')  :  14\n",
+      "       ('describes', 'neutral', 'no')  :  12\n",
+      "       ('disputes', 'neutral', 'no')  :  11\n",
+      "       ('obtains background from', 'neutral', 'no')  :  9\n",
+      "       ('cites as evidence', 'neutral', 'yes')  :  9\n",
+      "       ('cites for information', 'neutral', 'yes')  :  8\n",
+      "       ('cites as evidence', 'negative', 'yes')  :  8\n",
+      "       ('describes', 'neutral', 'yes')  :  8\n",
+      "       ('credits', 'negative', 'yes')  :  8\n",
+      "       ('disputes', 'neutral', 'yes')  :  7\n",
+      "       ('qualifies', 'neutral', 'yes')  :  7\n",
+      "       ('disputes', 'negative', 'yes')  :  6\n",
+      "       ('disputes', 'negative', 'no')  :  6\n",
+      "       ('obtains background from', 'negative', 'yes')  :  5\n",
+      "       ('cites as evidence', 'neutral', 'no')  :  5\n",
+      "       ('qualifies', 'negative', 'no')  :  5\n",
+      "       ('cites for information', 'negative', 'no')  :  4\n",
+      "       ('qualifies', 'negative', 'yes')  :  4\n",
+      "       ('includes excerpt from', 'neutral', 'yes')  :  4\n",
       "       ('describes', 'negative', 'no')  :  3\n",
-      "       ('cites for information', 'negative', 'no')  :  3\n",
-      "       ('ridicules', 'negative', 'no')  :  3\n",
-      "       ('qualifies', 'negative', 'no')  :  3\n",
-      "       ('uses conclusions from', 'neutral', 'no')  :  2\n",
-      "       ('discusses', 'positive', 'yes')  :  2\n",
-      "       ('discribes', 'neutral', 'no')  :  1\n",
-      "       ('extends', 'neutral', 'no')  :  1\n",
+      "       ('describes', 'negative', 'yes')  :  3\n",
+      "       ('qualifies', 'neutral', 'no')  :  2\n",
+      "       ('includes excerpt from', 'neutral', 'no')  :  1\n",
+      "       ('critiques', 'neutral', 'no')  :  1\n",
       "       ('uses data from', 'neutral', 'no')  :  1\n",
-      "       ('credits', 'negative', 'yes')  :  1\n",
-      "       ('obtains background from', 'negative', 'no')  :  1\n",
-      "       ('qualifies', 'negative', 'yes')  :  1\n",
-      "       ('cites as evidence', 'neutral', 'yes')  :  1\n",
-      "       ('qualifies', 'neutral', 'yes')  :  1\n",
-      "       ('ridicules', 'negative', 'yes')  :  1\n",
-      "       ('cites for information', 'neutral', 'yes')  :  1\n",
-      "       ('cites as evidence', 'negative', 'yes')  :  1\n",
-      "       ('cites for information', 'positive', 'no')  :  1\n",
-      "       ('describes', 'neutral', 'yes')  :  1\n",
-      "       ('disputes', 'negative', 'yes')  :  1\n"
+      "       ('refutes', 'negative', 'yes')  :  1\n",
+      "       ('uses data from', 'neutral', 'yes')  :  1\n",
+      "       ('obtains background from', 'negative', 'no')  :  1\n"
      ]
     }
    ],
@@ -384,7 +379,7 @@
     "print(\"      from other sources: \"+str(OTHER_DOCs))\n",
     "print(\"\\n+ Total number of in-text reference pointers: \",TOT_INTEXT_CIT)\n",
     "print(\"\\n+ Average number of in-text reference pointers per document: \",MEAN_CITxDOC)\n",
-    "print(\"\\n+ Documents whcih mention the retraction: \", RET_MEN['yes'])\n",
+    "print(\"\\n+ Documents which mention the retraction: \", RET_MEN['yes'])\n",
     "print(\"\\n+ In-text reference pointers: \")\n",
     "print(\"\\n      sentiment count:\")\n",
     "\n",
