retraction analysis 3 phases

--- a/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
+++ b/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,12 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_path_pre_retraction = \"csv/pre_retraction.csv\"\n",
-    "csv_path_post_retraction = \"csv/post_retraction.csv\""
+    "csv_1994_2004 = \"csv/1998_2004.csv\"\n",
+    "csv_2005_2010 = \"csv/2005_2010.csv\"\n",
+    "csv_2011_2017 = \"csv/2011_2017.csv\""
    ]
   },
   {
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +180,7 @@
     "test_sources = defaultdict(list)\n",
     "test_ret_men = defaultdict(list)\n",
     "\n",
-    "with open(csv_path_post_retraction) as a_file:\n",
+    "with open(csv_2011_2017) as a_file:\n",
     "    csv_reader = csv.reader(a_file, delimiter=',')\n",
     "    # skip the headers \n",
     "    # 0.Date,\n",
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,10 +287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
