retraction analysis : sources

--- a/project/retraction_analysis/analysis/wakefield_retraction/draft.ipynb
+++ b/project/retraction_analysis/analysis/wakefield_retraction/draft.ipynb
@@ -61,7 +61,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get values from external services\n",
+    "with open(\"csv/cits_in_coci.csv\", mode='r') as csv_file:\n",
+    "    csv_reader = csv.DictReader(csv_file)\n",
+    "    list_dois = [row[\"doi\"] for row in csv_reader]\n",
+    "\n",
+    "coci_meta_items = coci_metadata(list_dois,retracted_doi)\n",
+    "write_list([v for k,v in coci_meta_items.items()], \"coci_cits.csv\", header= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#GET ISSNs\n",
+    "citing_sources = coci_call(\"metadata\",[k for k in COCI_CITS_DICT],[\"source_title\",\"source_id\"])"
+   ]
   }
  ],
  "metadata": {
