--- a/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
+++ b/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,22 @@
     "        for k_att in l[l_index]:\n",
     "            str_row = str_row + '\"'+str(l[l_index][k_att]) +'\"'+','\n",
     "        f.write(str_row[:-1]+\"\\n\")\n",
+    "        \n",
+    "\n",
+    "def coci_call(operation, list_dois, fields):\n",
+    "    items_dict = {}\n",
+    "    for doi in list_dois:\n",
+    "        r = requests.get('https://opencitations.net/index/coci/api/v1/'+str(operation)+\"/\"+str(doi))\n",
+    "        if len(r.json()) > 0: \n",
+    "            if fields == \"*\":\n",
+    "                items_dict[doi] = r.json()[0]\n",
+    "            else:\n",
+    "                items_dict[doi] = {}\n",
+    "                for f in fields:\n",
+    "                    items_dict[doi][f] = None\n",
+    "                    if f in r.json()[0]:\n",
+    "                        items_dict[doi][f] = r.json()[0][f]\n",
+    "    return items_dict\n",
     "        "
    ]
   },
@@ -55,13 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_1994_2004 = \"csv/1998_2004.csv\"\n",
+    "csv_1998_2004 = \"csv/1998_2004.csv\"\n",
     "csv_2005_2010 = \"csv/2005_2010.csv\"\n",
-    "csv_2011_2017 = \"csv/2011_2017.csv\""
+    "csv_2011_2017 = \"csv/2011_2017.csv\"\n",
+    "coci_cits = \"csv/coci_cits.csv\""
    ]
   },
   {
@@ -73,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,6 +282,19 @@
     "TOT_DOC = df_cts_x_doc.count()\n",
     "DOI_DOCs = df[df[\"source\"] == \"doi\"][\"source\"].count()\n",
     "OTHER_DOCs = df[df[\"source\"] == \"other\"][\"source\"].count()\n",
+    "\n",
+    "#COCI CITS\n",
+    "COCI_CITS_DICT = {}\n",
+    "with open(coci_cits, mode='r') as csv_file:\n",
+    "    csv_reader = csv.DictReader(csv_file)\n",
+    "    for row in csv_reader:\n",
+    "        COCI_CITS_DICT[row[\"citing\"]] = row\n",
+    "COCI_CITS_DF = pd.DataFrame.from_dict(COCI_CITS_DICT).transpose()\n",
+    "COCI_CITS_DF['creation'] = COCI_CITS_DF['creation'].apply(lambda x: x[0:4])\n",
+    "CITS_SOURCES =  COCI_CITS_DF[['creation','source_title','source_id']]\n",
+    "SOURCES_BY_YEAR = defaultdict(set)\n",
+    "for row in CITS_SOURCES.itertuples():\n",
+    "    SOURCES_BY_YEAR[row[1]].add((row[2],row[3]))\n",
     "\n",
     "RET_MEN = defaultdict(int)       \n",
     "for item in list(df[\"retraction_mention\"]):\n",
@@ -281,13 +311,26 @@
     "        \n",
     "        CIT_INTENT_COUNT[cit_intent_val] += 1\n",
     "        SENTIMENT_COUNT[cit_sentiment_val] += 1  \n",
-    "        PATTERN[(cit_intent_val,cit_sentiment_val,item[\"retraction_mention\"])] += 1\n",
-    "        "
+    "        PATTERN[(cit_intent_val,cit_sentiment_val,item[\"retraction_mention\"])] += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write sources on csv\n",
+    "all_sources = []\n",
+    "for k,v in SOURCES_BY_YEAR.items():\n",
+    "    for item in v: \n",
+    "        all_sources.append({\"year\": k, \"source_title\": item[0], \"source_id\": item[1]})\n",
+    "write_list(all_sources, \"coci_sources.csv\", header= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -309,65 +352,65 @@
       "+ In-text reference pointers: \n",
       "\n",
       "      sentiment count:\n",
-      "       neutral  :  240\n",
-      "       negative  :  202\n",
+      "       neutral  :  231\n",
+      "       negative  :  209\n",
+      "       positive  :  2\n",
       "      -----\n",
       "\n",
       "      intent count:\n",
-      "       discusses  :  149\n",
-      "       credits  :  62\n",
-      "       critiques  :  45\n",
-      "       obtains background from  :  38\n",
-      "       cites as evidence  :  37\n",
-      "       disputes  :  30\n",
-      "       cites for information  :  29\n",
-      "       describes  :  26\n",
-      "       qualifies  :  18\n",
-      "       includes excerpt from  :  5\n",
-      "       uses data from  :  2\n",
+      "       discusses  :  122\n",
+      "       cites for information  :  45\n",
+      "       cites as evidence  :  45\n",
+      "       qualifies  :  44\n",
+      "       credits  :  43\n",
+      "       disputes  :  41\n",
+      "       critiques  :  39\n",
+      "       obtains background from  :  34\n",
+      "       describes  :  23\n",
+      "       includes excerpt from  :  4\n",
+      "       uses data from  :  1\n",
       "       refutes  :  1\n",
       "      -----\n",
       "\n",
       "      common patters (intent, sentiment, mentions retraction):\n",
-      "       ('discusses', 'neutral', 'yes')  :  48\n",
-      "       ('discusses', 'negative', 'yes')  :  39\n",
-      "       ('discusses', 'negative', 'no')  :  32\n",
-      "       ('discusses', 'neutral', 'no')  :  30\n",
-      "       ('critiques', 'negative', 'no')  :  29\n",
-      "       ('obtains background from', 'neutral', 'yes')  :  23\n",
-      "       ('credits', 'neutral', 'no')  :  22\n",
-      "       ('credits', 'negative', 'no')  :  18\n",
-      "       ('cites for information', 'neutral', 'no')  :  17\n",
+      "       ('discusses', 'negative', 'yes')  :  38\n",
+      "       ('discusses', 'neutral', 'yes')  :  36\n",
+      "       ('discusses', 'negative', 'no')  :  26\n",
+      "       ('cites for information', 'neutral', 'no')  :  23\n",
+      "       ('critiques', 'negative', 'no')  :  23\n",
+      "       ('obtains background from', 'neutral', 'yes')  :  22\n",
+      "       ('discusses', 'neutral', 'no')  :  20\n",
+      "       ('cites as evidence', 'negative', 'no')  :  20\n",
+      "       ('credits', 'neutral', 'no')  :  16\n",
       "       ('critiques', 'negative', 'yes')  :  15\n",
-      "       ('cites as evidence', 'negative', 'no')  :  15\n",
-      "       ('credits', 'neutral', 'yes')  :  14\n",
+      "       ('credits', 'negative', 'no')  :  14\n",
+      "       ('disputes', 'neutral', 'no')  :  14\n",
+      "       ('qualifies', 'neutral', 'yes')  :  14\n",
       "       ('describes', 'neutral', 'no')  :  12\n",
-      "       ('disputes', 'neutral', 'no')  :  11\n",
-      "       ('obtains background from', 'neutral', 'no')  :  9\n",
-      "       ('cites as evidence', 'neutral', 'yes')  :  9\n",
-      "       ('cites for information', 'neutral', 'yes')  :  8\n",
-      "       ('cites as evidence', 'negative', 'yes')  :  8\n",
+      "       ('qualifies', 'negative', 'no')  :  12\n",
+      "       ('disputes', 'neutral', 'yes')  :  11\n",
+      "       ('cites for information', 'neutral', 'yes')  :  11\n",
+      "       ('cites as evidence', 'negative', 'yes')  :  10\n",
+      "       ('disputes', 'negative', 'no')  :  10\n",
+      "       ('qualifies', 'negative', 'yes')  :  10\n",
+      "       ('cites as evidence', 'neutral', 'no')  :  9\n",
+      "       ('credits', 'neutral', 'yes')  :  9\n",
+      "       ('qualifies', 'neutral', 'no')  :  8\n",
       "       ('describes', 'neutral', 'yes')  :  8\n",
-      "       ('credits', 'negative', 'yes')  :  8\n",
-      "       ('disputes', 'neutral', 'yes')  :  7\n",
-      "       ('qualifies', 'neutral', 'yes')  :  7\n",
+      "       ('cites for information', 'negative', 'no')  :  7\n",
       "       ('disputes', 'negative', 'yes')  :  6\n",
-      "       ('disputes', 'negative', 'no')  :  6\n",
-      "       ('obtains background from', 'negative', 'yes')  :  5\n",
-      "       ('cites as evidence', 'neutral', 'no')  :  5\n",
-      "       ('qualifies', 'negative', 'no')  :  5\n",
-      "       ('cites for information', 'negative', 'no')  :  4\n",
-      "       ('qualifies', 'negative', 'yes')  :  4\n",
+      "       ('obtains background from', 'neutral', 'no')  :  6\n",
+      "       ('cites as evidence', 'neutral', 'yes')  :  6\n",
+      "       ('obtains background from', 'negative', 'yes')  :  6\n",
       "       ('includes excerpt from', 'neutral', 'yes')  :  4\n",
-      "       ('describes', 'negative', 'no')  :  3\n",
-      "       ('describes', 'negative', 'yes')  :  3\n",
-      "       ('qualifies', 'neutral', 'no')  :  2\n",
-      "       ('includes excerpt from', 'neutral', 'no')  :  1\n",
+      "       ('cites for information', 'negative', 'yes')  :  4\n",
+      "       ('credits', 'negative', 'yes')  :  4\n",
+      "       ('discusses', 'positive', 'yes')  :  2\n",
+      "       ('describes', 'negative', 'no')  :  2\n",
       "       ('critiques', 'neutral', 'no')  :  1\n",
+      "       ('describes', 'negative', 'yes')  :  1\n",
       "       ('uses data from', 'neutral', 'no')  :  1\n",
-      "       ('refutes', 'negative', 'yes')  :  1\n",
-      "       ('uses data from', 'neutral', 'yes')  :  1\n",
-      "       ('obtains background from', 'negative', 'no')  :  1\n"
+      "       ('refutes', 'negative', 'yes')  :  1\n"
      ]
     }
    ],
