retraction analysis : sources stats

--- a/project/retraction_analysis/analysis/wakefield_retraction/draft.ipynb
+++ b/project/retraction_analysis/analysis/wakefield_retraction/draft.ipynb
@@ -80,6 +80,47 @@
     "#GET ISSNs\n",
     "citing_sources = coci_call(\"metadata\",[k for k in COCI_CITS_DICT],[\"source_title\",\"source_id\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add dois to the sources\n",
+    "dict_sources = defaultdict(list)\n",
+    "with open(coci_cits, mode='r') as csv_file:\n",
+    "    csv_reader = csv.DictReader(csv_file)\n",
+    "    for row in csv_reader:\n",
+    "        dict_sources[(row[\"creation\"][0:4],row[\"source_title\"],row[\"source_id\"])].append(row[\"citing\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final = []\n",
+    "with open(coci_sources, mode='r') as csv_file:\n",
+    "    csv_reader = csv.DictReader(csv_file)\n",
+    "    for row in csv_reader:\n",
+    "        new_row = row\n",
+    "        new_row[\"doi\"] = \"\"\n",
+    "        a_key = (row[\"date\"],row[\"source_title\"],row[\"source_id\"])\n",
+    "        if a_key in dict_sources:\n",
+    "            new_row[\"doi\"] =  \"[[;;]]\".join(dict_sources[a_key])\n",
+    "        final.append(new_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_list(final, \"coci_sources_extended.csv\", header= False)"
+   ]
   }
  ],
  "metadata": {
