--- a/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
+++ b/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
@@ -71,14 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
     "csv_1998_2004 = \"csv/1998_2004.csv\"\n",
     "csv_2005_2010 = \"csv/2005_2010.csv\"\n",
     "csv_2011_2017 = \"csv/2011_2017.csv\"\n",
-    "coci_cits = \"csv/coci_cits.csv\""
+    "coci_cits = \"csv/coci_cits.csv\"\n",
+    "coci_sources = \"csv/coci_sources.csv\""
    ]
   },
   {
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,6 +165,30 @@
     "    note = [item.rstrip().lstrip().lower() for item in x.split(\";;\")]\n",
     "    note = list(filter(None, note))\n",
     "    return note\n",
+    "\n",
+    "## Normalize sources\n",
+    "\n",
+    "def norm_subject(x):\n",
+    "    x = x.rstrip().lstrip()\n",
+    "    norm_val = [item.rstrip().lstrip().lower() for item in x.split(\";;\")]\n",
+    "    norm_val = list(filter(None, norm_val))\n",
+    "    return norm_val\n",
+    "\n",
+    "def norm_area(x, intext_cits = None):\n",
+    "    x = x.rstrip().lstrip()\n",
+    "    norm_val = list(filter(None,[item for item in x.split(\";;\")])) \n",
+    "    norm_val = [item.split(\";\") for item in norm_val]   \n",
+    "    for i,item_val in enumerate(norm_val): \n",
+    "        for p,part_val in enumerate(item_val): \n",
+    "            norm_val[i][p] = part_val.rstrip().lstrip().lower()\n",
+    "    return norm_val\n",
+    "\n",
+    "def norm_source_dois(x):\n",
+    "    x = x.rstrip().lstrip()\n",
+    "    norm_val = [item.rstrip().lstrip().lower() for item in x.split(\"[[;;]]\")]\n",
+    "    norm_val = list(filter(None, norm_val))\n",
+    "    return norm_val\n",
+    "\n",
     "        "
    ]
   },
@@ -252,12 +277,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2) Citing articles Sources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_sources = []\n",
+    "#--- Testing\n",
+    "test_dates = defaultdict(list)\n",
+    "test_titles = defaultdict(list)\n",
+    "test_sources = defaultdict(list)\n",
+    "test_ret_men = defaultdict(list)\n",
+    "with open(coci_sources) as a_file:\n",
+    "    csv_reader = csv.reader(a_file, delimiter=',') \n",
+    "    #0. date\n",
+    "    #1. subject\n",
+    "    #2. area\n",
+    "    #3. source_title\n",
+    "    #4. source_id\n",
+    "    #5. notes\n",
+    "    #6. doi\n",
+    "\n",
+    "    #skip the header\n",
+    "    next(csv_reader, None)\n",
+    "    #iterate all the csv rows\n",
+    "    for row in csv_reader:\n",
+    "        if len(norm_subject(row[1])) != 0:\n",
+    "            elem = {\n",
+    "                \"year\" : int(norm_data(row[0])),\n",
+    "                \"subject\" : norm_subject(row[1]),\n",
+    "                \"area\" : norm_area(row[2]),\n",
+    "                \"source_title\" : norm_area(row[3]),\n",
+    "                \"source_id\" : norm_area(row[4]),\n",
+    "                \"doi\" : norm_source_dois(row[6])\n",
+    "            }\n",
+    "            valid_sources.append(elem)\n",
+    "            \n",
+    "            is_valid = (len(elem[\"subject\"]) == len(elem[\"area\"]))\n",
+    "            if not is_valid:\n",
+    "                print(elem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Analysis with pandas "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,12 +339,17 @@
     "#Rows are the DOIs \n",
     "df = pd.DataFrame.from_dict(valid_docs).transpose()\n",
     "df[\"intext_cit\"] = list(zip(df[\"cits_text\"],df[\"cit_intent\"],df[\"sentiment\"],df[\"section\"]))\n",
-    "sub_df = df[['year', 'source', 'title', 'abstract', 'retraction_mention', 'note', 'intext_cit']]"
+    "sub_df = df[['year', 'source', 'title', 'abstract', 'retraction_mention', 'note', 'intext_cit']]\n",
+    "\n",
+    "#Sources\n",
+    "df_sources = pd.DataFrame.from_dict(valid_sources)\n",
+    "df_sources[\"doi\"] = df_sources[\"doi\"].apply(lambda x: len(x))\n",
+    "df_sources = df_sources[(df_sources[\"year\"] >= 1998) & (df_sources[\"year\"] < 2005)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +390,37 @@
     "        \n",
     "        CIT_INTENT_COUNT[cit_intent_val] += 1\n",
     "        SENTIMENT_COUNT[cit_sentiment_val] += 1  \n",
-    "        PATTERN[(cit_intent_val,cit_sentiment_val,item[\"retraction_mention\"])] += 1"
+    "        PATTERN[(cit_intent_val,cit_sentiment_val,item[\"retraction_mention\"])] += 1\n",
+    "        \n",
+    "        \n",
+    "# The Sources\n",
+    "SUBJECTS = defaultdict(set)\n",
+    "SUBJECTS_count = defaultdict(int)\n",
+    "sub_area = list(zip(df_sources[\"subject\"], list(df_sources[\"area\"]), list(df_sources[\"doi\"])))\n",
+    "for tupla in sub_area:\n",
+    "    for sub_index in range(0,len(tupla[0])):\n",
+    "        SUBJECTS[tupla[0][sub_index]].update(tupla[1][sub_index])\n",
+    "        SUBJECTS_count[tupla[0][sub_index]] += tupla[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['arts and humanities', 'biochemistry, genetics and molecular biology', 'engineering', 'social sciences', 'medicine', 'psychology', 'immunology and microbiology', 'pharmacology, toxicology and pharmaceutics', 'neuroscience', 'computer science', 'earth and planetary sciences', 'dentistry', 'health professions', 'mathematics', 'nursing', 'agricultural and biological sciences'])"
+      ]
+     },
+     "execution_count": 327,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SUBJECTS.keys()"
    ]
   },
   {
